<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_todo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".todoapp.TodoActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/todo_background_todo_app"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="44dp"
            android:text="@string/todo_titulo"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            style="@style/todo_textos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/todo_categorias" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_todo_categoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/todo_textos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/todo_tareas" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_todo_tareas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_tarea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="56dp"
        android:contentDescription="@string/pulsame"
        android:src="@android:drawable/ic_input_add"
        app:backgroundTint="@color/todo_accent"
        android:layout_gravity="end|bottom"
        app:fabSize="normal"
        app:tint="@color/white" />

</FrameLayout>
